# gpted

./: .gitignore  Dockerfile  README.md  SCRATCHPAD.md  app.py  combine.py  combine_test.py  completions.py  completions_test.py  expand.py  expand_llm.py  expand_test.py  main.py  models.py  pyproject.toml  requirements.txt  run.py  shell.nix  text_processing.py
.github/workflows/: frontend-build.yml  python-tests.yml
frontend/: .gitignore  esbuild.js  package-lock.json  package.json  tsconfig.json
frontend/public/: index.css  index.html  index.js  index.js.map
frontend/src/: index.tsx  interfaces.ts
frontend/src/components/: App.tsx  Spinner.tsx  TokenChip.tsx  WordChip.tsx  app.tsx
