[project]
name = "playground-gpted"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "huggingface-hub>=0.25.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "openai>=1.51.2",
    "torch>=2.4.1",
    "transformers>=4.45.2",
]
